cmake_minimum_required(VERSION 3.15)
project(Labs)
#git remote add origin https://github.com/Amigo010/Labs.git
#git push -u origin master
set(CMAKE_CXX_STANDARD 17)
add_subdirectory(linkedList)
add_subdirectory(LAB_8__15_10_19)
add_subdirectory(test)
add_subdirectory(BinaryTree)
add_subdirectory(TreeMap)
add_subdirectory(LAB_9__29_10_19)